--- a/aula01/index.html
+++ b/aula01/index.html
@@ -29,6 +29,10 @@
     <textarea id="mensagem"></textarea>
     <br>
     <button id = "btnEnviar">Enviar</button>
+    <p id=""mensagemErro></p>
+    <div id="cadastro">
+        <h2>Usuario</h2>
+    </div>
 </form>
 
 </body>
